@@ -1,12 +1,13 @@
 ## automake.am
 ##
-## Makefile for the webhostd(8) daemon
+## Makefile webhost library
 ##
 ## (C) Copyright 2015 Fred Gleason <fredg@paravelsystems.com>
 ##
 ##   This program is free software; you can redistribute it and/or modify
-##   it under the terms of the GNU General Public License version 2 as
-##   published by the Free Software Foundation.
+##   it under the terms of the GNU General Public License as
+##   published by the Free Software Foundation; either version 2 of
+##   the License, or (at your option) any later version.
 ##
 ##   This program is distributed in the hope that it will be useful,
 ##   but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -19,36 +20,36 @@
 ##
 ## Use automake to process this into a Makefile.in
 
-AM_CPPFLAGS = -Wall -DPREFIX=\"$(prefix)\" -I$(top_srcdir)/src -Wno-strict-aliasing @QT4_CFLAGS@
-LIBS = -L$(top_srcdir)/src/wh
-MOC = @QT4_MOC@
+AM_CPPFLAGS = -Wall -Wno-strict-aliasing -I$(top_srcdir) @QT4_CFLAGS@
+MOC = @MOC@
 
 # The dependency for qt's Meta Object Compiler (moc)
 moc_%.cpp:	%.h
-	@MOC@ $< -o $@
+	$(MOC) $< -o $@
 
+clean-local:	
+	rm -rf debug release
 
-sbin_PROGRAMS = webhostd
+lib_LTLIBRARIES = libwebhost.la
+dist_libwebhost_la_SOURCES = whcmdswitch.cpp whcmdswitch.h\
+                             whprofile.cpp whprofile.h
 
-dist_webhostd_SOURCES = config.cpp config.h\
-                        ip.cpp\
-                        ntp.cpp\
-                        reboot.cpp\
-                        restart.cpp\
-                        upgrade.cpp\
-                        webhostd.cpp webhostd.h
+#nodist_libwebhost_la_SOURCES = 
 
-nodist_webhostd_SOURCES = moc_webhostd.cpp
+includedir = $(prefix)/include/wh
 
-webhostd_LDADD = @QT4_LIBS@ -lwebhost
-webhostd_LDFLAGS = 
+include_HEADERS = whcmdswitch.h\
+                  whprofile.h
+
+libwebhost_la_LDFLAGS = -version-info $(INTERFACE_CURRENT):$(INTERFACE_REVISION):$(INTERFACE_AGE)
+
+EXTRA_DIST = sy.pro
 
 CLEANFILES = *~\
-             moc_*\
-             *.obj\
              *.idb\
+             *ilk\
+             *.obj\
              *.pdb\
-             *ilk
-
+             moc_*
 MAINTAINERCLEANFILES = *~\
                        Makefile.in
