@@ -12,3 +12,5 @@
 	* Implemented the IP command in webhostd(8).
 2015-12-05 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented the RESTART command in webhostd(8).
+2015-12-12 Fred Gleason <fredg@paravelsystems.com>
+	* Stubbed out a 'libwebhost' library in 'src/wh/'.
